--- a/diyhue/Dockerfile
+++ b/diyhue/Dockerfile
@@ -1,14 +1,12 @@
 ARG BUILD_FROM=hassioaddons/base-python:5.3.4
-# hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
 # Set shell
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-# Set the build architecture and convert it from hassio to diyhue style
-# armhf, armv7, aarch64, amd64, i386
+# Build architecture
 ARG BUILD_ARCH=aarch64
-ENV BUILD_ARCHI = ${BUILD_ARCH}
+ENV BUILD_ARCHI=${BUILD_ARCH}
 
 # Other settings
 ENV LANG C.UTF-8
@@ -16,73 +14,83 @@ ENV DIYHUE_VERSION=master
 ENV DIYHUE_COMMIT=master
 ENV WORKING_DIR=/opt/hue-emulator
 
-# Create the needed folders
+# Create needed folders
 RUN mkdir diyhue config ${WORKING_DIR}
 
-# Install all needed dependencies
-RUN apk add -q -u python3 openssl nmap psmisc iproute2 alpine-sdk build-base
-RUN apk add --no-cache bluez
+# Telepítjük az alap build eszközöket és függőségeket Python buildhez
+RUN apk add --no-cache --virtual .build-deps \
+    gcc musl-dev libffi-dev openssl-dev make bzip2 wget curl unzip alpine-sdk build-base \
+    python3-dev py3-pip \
+    nmap psmisc iproute2 bluez
 
-# Download diyhue and unzip it
-RUN curl -sL -o diyhue.zip https://github.com/diyhue/diyHue/archive/${DIYHUE_COMMIT}.zip
-RUN unzip -qo diyhue.zip
-RUN rm diyhue.zip
-RUN pip3 install -r /diyHue-${DIYHUE_COMMIT}/requirements.txt --no-cache-dir
+# Letöltjük és buildeljük a Python 3.11.5 verziót (vagy ahogy szeretnéd)
+RUN wget https://www.python.org/ftp/python/3.11.5/Python-3.11.5.tgz && \
+    tar xzf Python-3.11.5.tgz && \
+    cd Python-3.11.5 && \
+    ./configure --enable-optimizations && \
+    make && make install && \
+    cd .. && \
+    rm -rf Python-3.11.5 Python-3.11.5.tgz
 
-# Install diyHue
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/flaskUI /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/functions /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/lights /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/sensors /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueObjects /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/services /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/configManager /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/logManager /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueEmulator3.py /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/githubInstall.sh /opt/hue-emulator/
-RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/genCert.sh /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/openssl.conf	/opt/hue-emulator/
+# Eltávolítjuk a build függőségeket, hogy kisebb legyen az image
+RUN apk del .build-deps
 
+# Letöltjük a diyHue forrást és feltelepítjük a függőségeket
+RUN curl -sL -o diyhue.zip https://github.com/diyhue/diyHue/archive/${DIYHUE_COMMIT}.zip && \
+    unzip -qo diyhue.zip && \
+    rm diyhue.zip && \
+    pip3 install -r /diyHue-${DIYHUE_COMMIT}/requirements.txt --no-cache-dir
 
-RUN curl -sL -o diyHueUI.zip https://www.github.com/diyhue/diyHueUI/releases/latest/download/DiyHueUI-release.zip
-RUN mkdir /diyhueUI
-RUN unzip -qo diyHueUI.zip -d /diyhueUI
-RUN rm diyHueUI.zip
-RUN cp -r /diyhueUI/dist/index.html			/opt/hue-emulator/flaskUI/templates/
-RUN cp -r /diyhueUI/dist/assets			/opt/hue-emulator/flaskUI/
-RUN rm -r /diyhueUI
+# Másoljuk a diyHue fájlokat
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/flaskUI /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/functions /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/lights /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/sensors /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueObjects /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/services /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/configManager /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/logManager /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueEmulator3.py /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/githubInstall.sh /opt/hue-emulator/ && \
+    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/genCert.sh /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/openssl.conf /opt/hue-emulator/
+
+# Letöltjük és telepítjük a diyHueUI legfrissebb verzióját
+RUN curl -sL -o diyHueUI.zip https://www.github.com/diyhue/diyHueUI/releases/latest/download/DiyHueUI-release.zip && \
+    mkdir /diyhueUI && \
+    unzip -qo diyHueUI.zip -d /diyhueUI && \
+    rm diyHueUI.zip && \
+    cp -r /diyhueUI/dist/index.html /opt/hue-emulator/flaskUI/templates/ && \
+    cp -r /diyhueUI/dist/assets /opt/hue-emulator/flaskUI/ && \
+    rm -r /diyhueUI
+
+# Töröljük a forráskódot
 RUN rm -r /diyHue-${DIYHUE_COMMIT}
 
-RUN apk --no-cache add --virtual build-deps gcc git make musl-dev \
-	&& git clone https://github.com/wolfcw/libfaketime \
-	&& cd libfaketime \
-	&& git checkout v0.9.10 \
-	&& make \
-	&& mv src/*.so* /lib && mv src/faketime /bin \
-	&& cd - \
-	&& rm -rf libfaketime \
-	&& apk del build-deps
+# Telepítjük a libfaketime-t a szükséges verzióval
+RUN apk --no-cache add --virtual build-deps gcc git make musl-dev && \
+    git clone https://github.com/wolfcw/libfaketime && \
+    cd libfaketime && \
+    git checkout v0.9.10 && \
+    make && \
+    mv src/*.so* /lib && mv src/faketime /bin && \
+    cd .. && rm -rf libfaketime && \
+    apk del build-deps
 
-# Set working directory to the Archive folder
+# Beállítjuk a munkakönyvtárat
 WORKDIR /opt/hue-emulator
 
-# Copy additional local build files
+# Másoljuk az addonhoz tartozó extra fájlokat
 COPY rootfs ./
 
-# Modify user rights of additional files
+# Jogok módosítása
 RUN chmod +x ./select.sh ./genCert.sh && chmod a+x ./run.sh
 
-# Sleect the right binaries depending on the arch
+# Válasszuk ki az architektúrának megfelelő binárisokat
 RUN ./select.sh
 
-# Build arguments
-ARG BUILD_DATE
-ARG BUILD_REF
-ARG BUILD_VERSION
-
-## Document volume
+# Dokumentálás
 VOLUME ["/config"]
 
-# Labels
 LABEL \
 	io.hass.name="diyHue" \
 	io.hass.description="Fully configurable diyHue Emulator" \
@@ -102,4 +110,4 @@ LABEL \
 	org.opencontainers.image.revision=${BUILD_REF} \
 	org.opencontainers.image.version=${BUILD_VERSION}
 
-CMD [ "./run.sh" ]
+CMD ["./run.sh"]
