--- a/diyhue/Dockerfile
+++ b/diyhue/Dockerfile
@@ -1,97 +1,105 @@
 ARG BUILD_FROM=hassioaddons/base-python:5.3.4
+# hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
-# Shell beállítás
+# Set shell
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
+# Set the build architecture and convert it from hassio to diyhue style
+# armhf, armv7, aarch64, amd64, i386
 ARG BUILD_ARCH=aarch64
-ENV BUILD_ARCHI=${BUILD_ARCH}
+ENV BUILD_ARCHI = ${BUILD_ARCH}
 
-ENV LANG=C.UTF-8
+# Other settings
+ENV LANG C.UTF-8
 ENV DIYHUE_VERSION=master
 ENV DIYHUE_COMMIT=master
 ENV WORKING_DIR=/opt/hue-emulator
 
-# Frissítsük az apk indexet, telepítsük a függőségeket
-RUN apk update && apk add --no-cache \
-    python3 \
-    py3-pip \
-    gcc \
-    musl-dev \
-    libffi-dev \
-    openssl-dev \
-    make \
-    bzip2 \
-    wget \
-    curl \
-    unzip \
-    nmap \
-    psmisc \
-    iproute2 \
-    bluez \
-    alpine-sdk \
-    build-base
+# Create the needed folders
+RUN mkdir diyhue config ${WORKING_DIR}
 
-# Készítsük el a mappákat
-RUN mkdir -p diyhue config ${WORKING_DIR}
+# Install all needed dependencies
+RUN apk add -q -u python3 openssl nmap psmisc iproute2 alpine-sdk build-base
+RUN apk add --no-cache bluez
 
-# Letöltés, telepítés, másolás stb. (eredeti scripted alapján)
-RUN curl -sL -o diyhue.zip https://github.com/diyhue/diyHue/archive/${DIYHUE_COMMIT}.zip && \
-    unzip -qo diyhue.zip && \
-    rm diyhue.zip && \
-    pip3 install -r /diyHue-${DIYHUE_COMMIT}/requirements.txt --no-cache-dir && \
-    cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/* ${WORKING_DIR}/ && \
-    curl -sL -o diyHueUI.zip https://www.github.com/diyhue/diyHueUI/releases/latest/download/DiyHueUI-release.zip && \
-    mkdir /diyhueUI && \
-    unzip -qo diyHueUI.zip -d /diyhueUI && \
-    rm diyHueUI.zip && \
-    cp -r /diyhueUI/dist/index.html ${WORKING_DIR}/flaskUI/templates/ && \
-    cp -r /diyhueUI/dist/assets ${WORKING_DIR}/flaskUI/ && \
-    rm -rf /diyhueUI && \
-    rm -rf /diyHue-${DIYHUE_COMMIT}
+# Download diyhue and unzip it
+RUN curl -sL -o diyhue.zip https://github.com/diyhue/diyHue/archive/${DIYHUE_COMMIT}.zip
+RUN unzip -qo diyhue.zip
+RUN rm diyhue.zip
+RUN pip3 install -r /diyHue-${DIYHUE_COMMIT}/requirements.txt --no-cache-dir
 
-# libfaketime telepítése
-RUN apk --no-cache add --virtual build-deps git gcc make musl-dev && \
-    git clone https://github.com/wolfcw/libfaketime && \
-    cd libfaketime && \
-    git checkout v0.9.10 && \
-    make && \
-    mv src/*.so* /lib && mv src/faketime /bin && \
-    cd .. && \
-    rm -rf libfaketime && \
-    apk del build-deps
+# Install diyHue
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/flaskUI /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/functions /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/lights /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/sensors /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueObjects /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/services /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/configManager /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/logManager /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/HueEmulator3.py /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/githubInstall.sh /opt/hue-emulator/
+RUN cp -r /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/genCert.sh /diyHue-${DIYHUE_COMMIT}/BridgeEmulator/openssl.conf	/opt/hue-emulator/
 
-WORKDIR ${WORKING_DIR}
 
+RUN curl -sL -o diyHueUI.zip https://www.github.com/diyhue/diyHueUI/releases/latest/download/DiyHueUI-release.zip
+RUN mkdir /diyhueUI
+RUN unzip -qo diyHueUI.zip -d /diyhueUI
+RUN rm diyHueUI.zip
+RUN cp -r /diyhueUI/dist/index.html			/opt/hue-emulator/flaskUI/templates/
+RUN cp -r /diyhueUI/dist/assets			/opt/hue-emulator/flaskUI/
+RUN rm -r /diyhueUI
+RUN rm -r /diyHue-${DIYHUE_COMMIT}
+
+RUN apk --no-cache add --virtual build-deps gcc git make musl-dev \
+	&& git clone https://github.com/wolfcw/libfaketime \
+	&& cd libfaketime \
+	&& git checkout v0.9.10 \
+	&& make \
+	&& mv src/*.so* /lib && mv src/faketime /bin \
+	&& cd - \
+	&& rm -rf libfaketime \
+	&& apk del build-deps
+
+# Set working directory to the Archive folder
+WORKDIR /opt/hue-emulator
+
+# Copy additional local build files
 COPY rootfs ./
 
-RUN chmod +x ./select.sh ./genCert.sh ./run.sh
+# Modify user rights of additional files
+RUN chmod +x ./select.sh ./genCert.sh && chmod a+x ./run.sh
 
+# Sleect the right binaries depending on the arch
 RUN ./select.sh
 
+# Build arguments
 ARG BUILD_DATE
 ARG BUILD_REF
 ARG BUILD_VERSION
 
+## Document volume
 VOLUME ["/config"]
 
+# Labels
 LABEL \
-    io.hass.name="diyHue" \
-    io.hass.description="Fully configurable diyHue Emulator" \
-    io.hass.arch="${BUILD_ARCH}" \
-    io.hass.type="addon" \
-    io.hass.version=${BUILD_VERSION} \
-    maintainer="diyHue <info@diyHue.org>" \
-    org.opencontainers.image.title="diyHue" \
-    org.opencontainers.image.description="Fully configurable diyHue Emulator" \
-    org.opencontainers.image.vendor="diyHue" \
-    org.opencontainers.image.authors="diyHue <info@diyHue.org>" \
-    org.opencontainers.image.licenses="MIT" \
-    org.opencontainers.image.url="diyHue.org" \
-    org.opencontainers.image.source="https://github.com/diyhue/diyhue" \
-    org.opencontainers.image.documentation="diyhue.readthedocs.io" \
-    org.opencontainers.image.created=${BUILD_DATE} \
-    org.opencontainers.image.revision=${BUILD_REF} \
-    org.opencontainers.image.version=${BUILD_VERSION}
+	io.hass.name="diyHue" \
+	io.hass.description="Fully configurable diyHue Emulator" \
+	io.hass.arch="${BUILD_ARCH}" \
+	io.hass.type="addon" \
+	io.hass.version=${BUILD_VERSION} \
+	maintainer="diyHue <info@diyHue.org>" \
+	org.opencontainers.image.title="diyHue" \
+	org.opencontainers.image.description="Fully configurable diyHue Emulator" \
+	org.opencontainers.image.vendor="diyHue" \
+	org.opencontainers.image.authors="diyHue <info@diyHue.org>" \
+	org.opencontainers.image.licenses="MIT" \
+	org.opencontainers.image.url="diyHue.org" \
+	org.opencontainers.image.source="https://github.com/diyhue/diyhue" \
+	org.opencontainers.image.documentation="diyhue.readthedocs.io" \
+	org.opencontainers.image.created=${BUILD_DATE} \
+	org.opencontainers.image.revision=${BUILD_REF} \
+	org.opencontainers.image.version=${BUILD_VERSION}
 
-CMD ["./run.sh"]
+CMD [ "./run.sh" ]
