--- a/diyhue/Dockerfile
+++ b/diyhue/Dockerfile
@@ -13,7 +13,7 @@ ENV BUILD_ARCHI = ${BUILD_ARCH}
 # Other settings
 ENV LANG C.UTF-8
 ENV DIYHUE_VERSION=master
-ENV DIYHUE_COMMIT=main
+ENV DIYHUE_COMMIT=9604db9241605a2f3ae4b5504ce3c4c3ea29ec6f
 ENV DIYHUE_UI_VERSION=v2.0.3
 ENV WORKING_DIR=/opt/hue-emulator
 
