--- a/diyhue/config.json
+++ b/diyhue/config.json
@@ -1,8 +1,8 @@
 {
-    "name": "diyHuee",
-    "version": "2.0.32",
+    "name": "diyHue",
+    "version": "2.0.31",
     "slug": "diyhue",
-    "description": "Emulatee a Hue Bridge, add lights, sensors etc. from different vendors into one Ecosystem",
+    "description": "Emulate a Hue Bridge, Amvilight+hue Background Light OFF",
     "webui": "http://[HOST]:[PORT:80]",
     "panel_icon": "mdi:home-lightbulb",
     "arch": [
