--- a/diyhue/config.json
+++ b/diyhue/config.json
@@ -1,8 +1,8 @@
 {
-    "name": "diyHue"
-    "version": "2.0.33",
+    "name": "diyHue",
+    "version": "2.0.31",
     "slug": "diyhue",
-    "description": "Emulate Hue Bridge, Ambilight+hue Background Light OFF by default.",
+    "description": "Emulate a Hue Bridge, add lights, sensors etc. from different vendors into one Ecosystem",
     "webui": "http://[HOST]:[PORT:80]",
     "panel_icon": "mdi:home-lightbulb",
     "arch": [
