Refactor Dockerfile to use Debian for dependencies
Updated Dockerfile to use Debian package manager and install dependencies accordingly.

--- a/diyhue/Dockerfile
+++ b/diyhue/Dockerfile
@@ -3,13 +3,21 @@ FROM $BUILD_FROM
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-ENV LANG C.UTF-8
+ENV LANG=C.UTF-8
 ENV WORKING_DIR=/opt/hue-emulator
 
-# Install dependencies
-RUN apk add --no-cache git bash bluez nmap openssl iproute2
+# Install dependencies (Debian!)
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        git \
+        bluez \
+        nmap \
+        iproute2 \
+        openssl \
+        bash && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Clone latest diyHue
+# Clone diyHue
 RUN git clone https://github.com/diyhue/diyHue ${WORKING_DIR}
 
 WORKDIR ${WORKING_DIR}
@@ -17,7 +25,7 @@ WORKDIR ${WORKING_DIR}
 # Install Python deps
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy addon run script
+# Copy addon rootfs (run.sh, config, stb.)
 COPY rootfs/ /
 
 RUN chmod +x /run.sh
